--- a/work_order_manager_ui/pubspec.yaml
+++ b/work_order_manager_ui/pubspec.yaml
@@ -31,8 +31,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   http: ^0.13.5
+  json_serializable: ^6.5.4
+  build_runner: ^2.3.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
