--- a/work_order_manager_ui/android/app/src/main/AndroidManifest.xml
+++ b/work_order_manager_ui/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.work_order_manager_ui">
    <application
-        android:label="work_order_manager_ui"
+        android:label="Sevencar Gerenciador"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
