--- a/work_order_manager_ui/pubspec.yaml
+++ b/work_order_manager_ui/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   json_serializable: ^6.5.4
   build_runner: ^2.3.2
   intl: ^0.17.0
+  flutter_bloc: ^8.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
