--- a/work_order_manager_ui/pubspec.yaml
+++ b/work_order_manager_ui/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   http: ^0.13.5
   json_serializable: ^6.5.4
   build_runner: ^2.3.2
+  shared_preferences: ^2.0.15
   intl: ^0.17.0
   flutter_bloc: ^8.1.1
   adaptive_theme: ^3.1.1
