--- a/work_order_manager_ui/pubspec.yaml
+++ b/work_order_manager_ui/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_bloc: ^8.1.1
   adaptive_theme: ^3.1.1
   mask_text_input_formatter: ^2.4.0
+  loader_overlay: ^2.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
