--- a/work_order_manager_ui/pubspec.yaml
+++ b/work_order_manager_ui/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   mask_text_input_formatter: ^2.4.0
   loader_overlay: ^2.1.0
   flutter_secure_storage: ^6.1.0
+  flutter_launcher_icons: ^0.11.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -101,3 +102,19 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_icons:
+  image_path: "assets/app_icon.png"
+  android: true
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  ios: true
+  web:
+    generate: true
+    image_path: "assets/app_icon_desktop.png"
+  windows:
+    generate: true
+    image_path: "assets/app_icon_desktop.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    image_path: "assets/app_icon_desktop.png"
+    generate: true
