--- a/work_order_manager_ui/pubspec.yaml
+++ b/work_order_manager_ui/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_secure_storage: ^6.1.0
   flutter_launcher_icons: ^0.11.0
   url_launcher: ^6.1.7
+  diacritic: ^0.1.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
