Use Sevencar mascot image instead of User icon in drawer

--- a/work_order_manager_ui/pubspec.yaml
+++ b/work_order_manager_ui/pubspec.yaml
@@ -103,6 +103,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  assets:
+    - sevencar_mascot.png
 
 flutter_icons:
   image_path: "assets/app_icon.png"
