Add permission necessary for Android Release and change Windows bg task name

--- a/work_order_manager_ui/android/app/src/main/AndroidManifest.xml
+++ b/work_order_manager_ui/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.work_order_manager_ui">
+   <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="Sevencar Gerenciador"
         android:name="${applicationName}"
